# dwipe-2.1.0-disknukem

./: Makefile  Makefile.am  README  README.md  autogen.sh  configure  configure.in  dwipe  dwipe.c  dwipe.h  httpd.c  httpd.h  identify.h  json.c  logging.c  mt19937ar-cok.c  options.c  options.h  pass.c  pass.c-original  pass.h  xml.c  xml.h
.svn/: entries
.svn/text-base/: device.c.svn-base  dwipe.c.svn-base  gui.c.svn-base  method.c.svn-base  method.h.svn-base  options.h.svn-base  prng.c.svn-base
data/: Makefile  Makefile.am  Makefile.in
data/disknukem/: Makefile  Makefile.am  Makefile.in
data/disknukem/web/: Makefile  Makefile.am  Makefile.in  core.js
src/: Makefile  Makefile.am  Makefile.in  context.h  device.c  device.h  disknukem  dwipe.c  gui.c  gui.h  httpd.c  httpd.h  json.c  json.h  logging.h  mt19937ar-cok.h  notify.c  notify.h  prng.h  xml.c  xml.h
web/: index.html
