bin_PROGRAMS = disknukem
disknukem_SOURCES = device.c dwipe.c gui.c httpd.c isaac_rand.c json.c logging.c method.c mt19937ar-cok.c notify.c options.c pass.c prng.c xml.c
AM_CFLAGS = -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -Os -Wall -lncurses -lmicrohttpd -lpthread -lxml2 -I/usr/include/libxml2 -ljson -lcurl
